Change to /sys/bus/i2c/devices/... paths.
Per review comments, change device paths to symlinks thought to be more
stable.

(From meta-ibm rev: ad75a64d9b120f9b9ed0453acca1da2bf119e78e)

Signed-off-by: Jim Wright <jlwright@us.ibm.com>
Change-Id: I925dac346368a0a40fa64948ac7f640c33f15019
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/recipes-phosphor/power/power-sequencer/rainier/ucd90160.yaml
+++ b/meta-ibm/meta-witherspoon/recipes-phosphor/power/power-sequencer/rainier/ucd90160.yaml
@@ -1,7 +1,7 @@
 - Device:
   index: 0
   # Linux sysfs path for this power sequencer (0x22 8-bit address)
-  path:  /sys/devices/platform/ahb/ahb:apb/ahb:apb:bus@1e78a000/1e78a480.i2c-bus/i2c-8/8-0011
+  path:  /sys/bus/i2c/devices/i2c-8/8-0011
   RailNames:
       - "12.0V"
       - "5.0V_USB"
